# cpp_practices

./: .gitignore  README.md
Functions/: .gitignore  CMakeLists.txt  Tnode.cpp
Functions/include/: Node.hpp  Tree.hpp
Functions/src/: Node.cpp  Tree.cpp  main.cpp
